force-app/main/default/objects/User_Scorecard__c/User_Scorecard__c.object-meta.xml
<CustomObject>
    <description>Metric Scorecard</description>
    <label>User Scorecard</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>User Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>