force-app/main/default/objects/User_Scorecard__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <formula>User__r.Hire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>