force-app/main/default/objects/User_Scorecard__c/fields/Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Date__c</fullName>
    <inlineHelpText>The date on which the scores were last calculated for this user</inlineHelpText>
    <label>Last Refresh Date</label>
    <type>DateTime</type>
</CustomField>