force-app/main/default/objects/User_Scorecard__c/fields/Manager_s_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_ID__c</fullName>
    <formula>User__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager&apos;s ID</label>
    <type>Text</type>
</CustomField>