force-app/main/default/objects/User_Scorecard__c/fields/Metric_10_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Metric_10_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metric 10 Exclude</label>
    <type>Checkbox</type>
</CustomField>