force-app/main/default/objects/User_Scorecard__c/fields/Metric_10_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_10_Name__c</fullName>
    <label>Metric 10 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>