force-app/main/default/objects/User_Scorecard__c/fields/Metric_10_Score__c.field-meta.xml
<CustomField>
    <fullName>Metric_10_Score__c</fullName>
    <label>Metric 10 Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>