force-app/main/default/objects/User_Scorecard__c/fields/Metric_10_Scorecard_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Metric_10_Scorecard_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metric 10 Scorecard Assignment</label>
    <referenceTo>Metric_Scorecard_Assignment__c</referenceTo>
    <relationshipLabel>User Scorecards (Metric 10 Scorecard Assignment)</relationshipLabel>
    <relationshipName>User_Scorecards9</relationshipName>
    <type>Lookup</type>
</CustomField>