force-app/main/default/objects/User_Scorecard__c/fields/Metric_1_Goal__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_Goal__c</fullName>
    <label>Metric 1 Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>