force-app/main/default/objects/User_Scorecard__c/fields/Metric_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_Name__c</fullName>
    <label>Metric 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>