force-app/main/default/objects/User_Scorecard__c/fields/Metric_1_Scorecard_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_Scorecard_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metric 1 Scorecard Assignment</label>
    <referenceTo>Metric_Scorecard_Assignment__c</referenceTo>
    <relationshipLabel>User Scorecards</relationshipLabel>
    <relationshipName>User_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>