force-app/main/default/objects/User_Scorecard__c/fields/Metric_1_Weight__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_Weight__c</fullName>
    <formula>Metric_1_Scorecard_Assignment__r.Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metric 1 Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>