force-app/main/default/objects/User_Scorecard__c/fields/Metric_2_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Metric_2_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this box is checked, this metric is excluded from the overall score (because the current goal has not met the threshold)</inlineHelpText>
    <label>Metric 2 Exclude</label>
    <type>Checkbox</type>
</CustomField>