force-app/main/default/objects/User_Scorecard__c/fields/Metric_2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Metric_2_Percent__c</fullName>
    <label>Metric 2 Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>