force-app/main/default/objects/User_Scorecard__c/fields/Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Scorecard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Scorecard</label>
    <referenceTo>Metric_Scorecard__c</referenceTo>
    <relationshipLabel>User Scorecards</relationshipLabel>
    <relationshipName>User_Scorecards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>