force-app/main/default/objects/User_Scorecard__c/fields/Scorecard_Link__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Link__c</fullName>
    <formula>HYPERLINK(&quot;/apex/MetricScorecard?id=&quot;+ User__r.Id ,&quot;View Scorecard Report&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorecard Link</label>
    <type>Text</type>
</CustomField>