force-app/main/default/objects/User_Scorecard__c/fields/Snapshot_Name__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Name__c</fullName>
    <formula>User__r.FirstName + &quot; &quot; + User__r.LastName + &quot; &quot;+&quot;-&quot;+&quot; &quot;+ TEXT(MONTH(TODAY()))+ &quot;/&quot; + TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Name</label>
    <type>Text</type>
</CustomField>