force-app/main/default/objects/User_Scorecard__c/listViews/Partner_Account_Manager.listView-meta.xml
<ListView>
    <fullName>Partner_Account_Manager</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Manager__c</columns>
    <columns>Last_Refresh_Date__c</columns>
    <columns>Scorecard__c</columns>
    <columns>User_Role__c</columns>
    <columns>Overall_Score__c</columns>
    <columns>Scorecard_Link__c</columns>
    <columns>Metric_1_Percent__c</columns>
    <columns>Metric_2_Percent__c</columns>
    <columns>Metric_3_Percent__c</columns>
    <columns>Metric_4_Percent__c</columns>
    <columns>Metric_5_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scorecard__c</field>
        <operation>equals</operation>
        <value>Partner Account Manager</value>
    </filters>
    <label>Partner Account Manager</label>
</ListView>