force-app/main/default/objects/User_Scorecard__c/listViews/User_Scorecard_Search_Update.listView-meta.xml
<ListView>
    <fullName>User_Scorecard_Search_Update</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Scorecard__c</columns>
    <columns>Metric_1_Scorecard_Assignment__c</columns>
    <columns>Metric_2_Scorecard_Assignment__c</columns>
    <columns>Metric_3_Scorecard_Assignment__c</columns>
    <columns>Metric_4_Scorecard_Assignment__c</columns>
    <columns>Metric_5_Scorecard_Assignment__c</columns>
    <columns>Metric_6_Scorecard_Assignment__c</columns>
    <columns>Metric_7_Scorecard_Assignment__c</columns>
    <columns>Metric_8_Scorecard_Assignment__c</columns>
    <columns>Metric_9_Scorecard_Assignment__c</columns>
    <columns>Metric_10_Scorecard_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>DeAndress Green,Robin Hanley</value>
    </filters>
    <label>User Scorecard Search + Update</label>
</ListView>